Set height to auto for location section, to fix alignment on wider screens of 2500px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ h2 {
 }
 
 .location {
-    height: 600px;
+    height: auto;
     /* background-image: url(../images/sfondo.jpeg);
     background-repeat: no-repeat;
     background-position: center;
